# MPM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  readme.md
.claude/: settings.json
.claude/agents/: planner.md  reviewer.md
.claude/rules/: mpm-pm.md  mpm-workflow.md
.claude/skills/mpm-autonext/: SKILL.md
.claude/skills/mpm-init-project/: SKILL.md
.claude/skills/mpm-next/: SKILL.md
.claude/skills/mpm-recycle/: SKILL.md
.claude/skills/mpm-task-write/: SKILL.md
.mpm/data/past/: 260319.json
.mpm/docs/: PROJECT.md  VERIFICATION.md
.mpm/scripts/: hook-init-check.sh  hook-notify.sh  hook-planner-start.sh  hook-pretool-task-check.sh  hook-review.sh  hook-task-reminder.sh  task.py
dashboard/: projects.py  requirements.txt  server.py
dashboard/templates/: index.html  terminal.html
data/: config.json  ideas.json
docs/: ARCHITECTURE.md  ROADMAP.md
docs/handoff/: 2603140119.md  2603141321.md  2603141524.md  2603151211.md  2603151710.md  2603161121.md  2603161218.md  2603161430.md  2603171155.md
gateway/: session_manager.py
src/mpm/: cli.py
src/mpm/dashboard/: projects.py  server.py
src/mpm/gateway/: session_manager.py
templates/.claude/: settings.json
templates/.claude/agents/: mpm-developer.md  mpm-planner.md  mpm-reviewer.md  planner.md  reviewer.md
templates/.claude/rules/: mpm-workflow.md
templates/.mpm/: mpm-workflow.md
templates/.mpm/data/: phases.json
templates/.mpm/scripts/: hook-autonext-stop.sh  hook-init-check.sh  hook-is-native-planner.sh  hook-planner-start.sh  hook-pretool-task-check.sh  hook-review.sh  phase.py  (+7 more)
(+16 files in other folders)
