[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpm-dashboard"
version = "0.1.0"
description = "Multi Project Manager — Dashboard for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "requests>=2.31",
    "markdown>=3.5",
    "watchdog>=4.0",
    "click>=8.1",
    "questionary>=2.0",
    "tzdata>=2024.1",
]

[project.scripts]
mpm = "mpm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mpm"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/mpm/templates"
